# web_server2

./: .clang-format  .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  config.ini.example  config.txt  todo
.github/workflows/: cmake-multi-platform.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.record
cmake/: compile_option.cmake  generate_build_info.cmake  link_benchmark.cmake  link_boost.cmake  link_breutil.cmake  link_libpqcxx.cmake  platform.cmake
docs/: 1_asio_server.md  2_session_handling.md  3_http_handling.md  4_third_party_libraries.md  5_cmake_usage.md  6_ci_handling.md  README.md
fronted/: login.html  register.html
sql/: create.sh  create_base.sql  schema.sql
src/: CMakeLists.txt  main.cpp
src/buffer/: Buffer.cpp_no  buffer.hpp
src/config/: Config.cpp  Config.hpp
src/database/: PostgreSQLPool.hpp  postgre_pool.cpp  postgre_pool.hpp
src/http/: HttpConnection.cpp  HttpConnection.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp
src/pool/: ThreadPool.cpp  ThreadPool.hpp
src/server/: IoContextPool.cpp  IoContextPool.hpp  Session.cpp  Session.hpp  WebServer.cpp  WebServer.hpp
src/service/: user_service.cpp  user_service.hpp
src/tests/: benchmark.cpp  test_buffer.cpp  test_config.cpp  test_http.cpp  test_threadpool.cpp
src/timer/: Timer.hpp
tests/: CMakeLists.txt  test_content_type.cpp  test_http.cpp  test_http_methods.cpp  test_http_status.cpp  test_session.cpp  test_threadpool.cpp
